--- a/demo-ckan.html
+++ b/demo-ckan.html
@@ -40,29 +40,24 @@
 
 </head>
 <body>
+
+<form class="search">
+<input type="search" />
+<button type="submit" />Go</button>
+</form>
+
 <div class="pager-here"></div>
 <div id="mygrid" style="height: 400px">
 </div>
 
 <script type="text/javascript">
-// https://github.com/okfn/recline/blob/10f115f778c39b916fd281db98d4e4f21b714966/demos/search/demo.search.app.js
-var data = [
-  {id: 0, date: '2011-01-01', x: 1, y: 2, z: 3, country: 'DE', geo: {lat:52.56, lon:13.40} },
-  {id: 1, date: '2011-02-02', x: 2, y: 4, z: 24, country: 'UK', geo: {lat:54.97, lon:-1.60}},
-  {id: 2, date: '2011-03-03', x: 3, y: 6, z: 9, country: 'US', geo: {lat:40.00, lon:-75.5}},
-  {id: 3, date: '2011-04-04', x: 4, y: 8, z: 6, country: 'UK', geo: {lat:57.27, lon:-6.20}},
-  {id: 4, date: '2011-05-04', x: 5, y: 10, z: 15, country: 'UK', geo: {lat:51.58, lon:0}},
-  {id: 5, date: '2011-06-02', x: 6, y: 12, z: 18, country: 'DE', geo: {lat:51.04, lon:7.9}}
-];
 var dataset = new recline.Model.Dataset({
-  // url: 'https://docs.google.com/spreadsheet/ccc?key=0Aon3JiuouxLUdGZPaUZsMjBxeGhfOWRlWm85MmV0UUE#gid=0',
-  // backend: 'gdocs'
   url: 'http://www.civicdata.com/dataset/lexington-building-permits/resource/2691aff1-e555-48d3-9188-aebf1fa8323e',
   backend: 'ckan',
 });
 
 var $el = $('#mygrid');
-var grid = new recline.View.Grid({
+var grid = new recline.View.SlickGrid({
   model: dataset,
   el: $el
 });
@@ -74,15 +69,17 @@ var pager = new recline.View.Pager({
 $('.pager-here').append(pager.el);
 
 dataset.fetch().done(function(dataset) {
+  grid.visible = true;
+  grid.render();
   if (console) {
     console.log(dataset.records);
   }
 });
 
-dataset.query({q: 'cathedral'});
-
-// grid.visible = true;
-// grid.render();
+$('.search').submit(function(e) {
+  e.preventDefault();
+  dataset.query({q: $(e.target).find('input').val()});
+});
 </script>
 </body>
 </html>
